@@ -6,7 +6,6 @@ import com.proyecto.model.Nodo;
 import com.proyecto.nucleo.CargadorCSV;
 import com.proyecto.nucleo.Grafo;
 
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Scanner;
 
@@ -21,7 +20,7 @@ public class Main {
             System.out.println("=== Cargando el mapa de Madrid ===");
             cargadorMadrid.cargarNodos("csv/nodes.csv", madrid);
             cargadorMadrid.cargarAristas("csv/edges.csv", madrid);
-            System.out.println("Mapa cargado con éxito");
+            System.out.println("¡Mapa cargado con éxito!");
         } catch (Exception e) {
             System.err.println("Error al cargar los archivos: " + e.getMessage());
             return;
@@ -35,41 +34,49 @@ public class Main {
         String dirOrigen;
         String dirDestino;
 
+        System.out.print("\n=== NAVEGACIÓN POR MADRID ===");
         while (nodoOrigen == null || nodoOrigen.isEmpty()) {
-            System.out.print("\nIntroduce la calle de ORIGEN: ");
+            System.out.print("\n1. ¿A dónde quieres ir?: ");
             dirOrigen = scanner.nextLine();
             nodoOrigen = madrid.obtenerNodosPorCalle(dirOrigen.toLowerCase()); // Obtenemos el ID de la calle (tomamos el primero de la lista para simplificar)
 
             if (nodoOrigen == null || nodoOrigen.isEmpty()) {
-                System.out.println("Error: La dirección '" + dirOrigen + "' no ha sido encontrada. Inténtelo de nuevo");
+                System.out.println("No se encontró: '" + dirOrigen + "'");
+                System.out.println("* Comprueba la ortografía del nombre de la calle (tildes, guiones, comillas)");
+                System.out.println("* Verifica si añadiste la palabra 'de' después del tipo de vía");
+                System.out.println("* Ejemplo: Escribe 'Calle de Alcalá' en lugar de 'Calle Alcala'");
+
             }
         }
         while (nodoDestino == null || nodoDestino.isEmpty()) {
-            System.out.print("Introduce la calle de DESTINO: ");
+            System.out.print("2. ¿Desde dónde vas a ir?: ");
             dirDestino = scanner.nextLine();
             nodoDestino = madrid.obtenerNodosPorCalle(dirDestino.toLowerCase());
 
             if (nodoDestino == null || nodoDestino.isEmpty()) {
-                System.out.println("Error: La dirección '" + dirDestino + "' no ha sido encontrada. Inténtelo de nuevo");
+                System.out.println("No se encontró: '" + dirDestino + "'");
+                System.out.println("* Comprueba la ortografía del nombre de la calle (tildes, guiones, comillas)");
+                System.out.println("* Verifica si añadiste la palabra 'de' después del tipo de vía");
+                System.out.println("* Ejemplo: Escribe 'Calle de Alcalá' en lugar de 'Calle Alcala'\n");
             }
         }
 
         // Se cogerá el primero de la lista de nodos,
-        long idO = nodoOrigen.get(0);
-        long idD = nodoDestino.get(0);
+        long idOrigen = nodoOrigen.getFirst();
+        long idDestino = nodoDestino.getFirst();
 
         // Ejecución y comparativa de modelos
         System.out.println("\n=== RESULTADOS DE LA ALGORITMIA ===");
 
         // Ejecución Dijkstra
         long inicioD = System.currentTimeMillis();
-        List<Long> rutaDijkstra = buscador.buscarRuta(idO, idD, false);
+        List<Long> rutaDijkstra = buscador.buscarRuta(idOrigen, idDestino, false);
         long finD = System.currentTimeMillis();
         int nodosD = buscador.getNodosExplorados();
 
         // Ejecución A*
         long inicioA = System.currentTimeMillis();
-        List<Long> rutaAEstrella = buscador.buscarRuta(idO, idD, true);
+        List<Long> rutaAEstrella = buscador.buscarRuta(idOrigen, idDestino, true);
         long finA = System.currentTimeMillis();
         int nodosA = buscador.getNodosExplorados();
 
@@ -77,30 +84,22 @@ public class Main {
         if (rutaAEstrella == null || rutaDijkstra == null) {
             System.out.println("No se ha encontrado ninguna ruta válida");
         } else {
-            imprimirComparativa("Dijkstra", rutaDijkstra, finD - inicioD, nodosD);
-            imprimirComparativa("A*", rutaAEstrella, finA - inicioA, nodosA);
+            imprimirComparativa("Dijkstra", finD - inicioD, nodosD, rutaDijkstra.size());
+            imprimirComparativa("A*", finA - inicioA, nodosA, rutaAEstrella.size());
 
-            System.out.println("\n=== ALGORITMO DE A* ===:");
-            System.out.println("Número de paradas: " + rutaAEstrella.size());
             nodosRecorridos(rutaAEstrella, madrid);
-
-
-            System.out.println("\n=== ALGORITMO DE DIJKSTRA ===:");
-            System.out.println("Número de paradas: " + rutaDijkstra.size());
-            nodosRecorridos(rutaDijkstra, madrid);
         }
     }
 
-    private static void imprimirComparativa(String tipoAlgoritmo, List<Long> ruta, long tiempo, int explorados) {
-        System.out.printf("[%s] -> Tiempo ejecución: %d ms | Nodos explorados: %d\n",
-                tipoAlgoritmo, tiempo, explorados);
+    private static void imprimirComparativa(String tipoAlgoritmo, long tiempo, int explorados, int ruta) {
+        System.out.printf(tipoAlgoritmo + " -> Tiempo ejecución: " + tiempo + " ms | " + "Nº de nodos explorados: " + explorados + " | Número de paradas: " + ruta + "\n");
     }
 
     // Metodo para poder mostrar la ruta que se ha seguido en los algoritmos
     private static void nodosRecorridos(List<Long> ruta, Grafo grafo) {
-        System.out.println("\n=== RUTA A SEGUIR ===");
+        System.out.println("\n=== RUTA SEGUIDA ===");
         double tiempoTotal = 0;
-        double distanciaTotal = 0;
+        int distanciaTotal = 0;
 
         // Recorreremos la ruta yendo de nodo en nodo
         for (int i = 0; i < ruta.size() - 1; i++) {
@@ -108,7 +107,6 @@ public class Main {
             long idNodoSiguiente = ruta.get(i + 1);
 
             Nodo nodoActual = grafo.getNodos().get(idNodoActual);
-
 
             // Se buscará la arista que conecta los dos nodos, el actual con el siguiente
             Arista aristaEncontrada = null;
@@ -122,17 +120,16 @@ public class Main {
             if (aristaEncontrada != null) {
                 double tiempoSegundos = aristaEncontrada.getTiempoViaje();
                 double distanciaMetros = aristaEncontrada.getDistancia();
-                double velocidadKmh = aristaEncontrada.getMaxVelocidad();
                 String nombreVia = aristaEncontrada.getNombreVia();
 
                 tiempoTotal += tiempoSegundos;
-                distanciaTotal += distanciaMetros;
+                distanciaTotal += (int) distanciaMetros;
 
                 // Convertiremos el tiempo de segundos a minutos y segundos
-                double minutos = (int) tiempoSegundos / 60;
-                double segundos = (int) tiempoSegundos % 60;
+                int minutos = (int) (tiempoSegundos / 60);
+                int segundos = (int) tiempoSegundos % 60;
 
-                System.out.println("ID del nodo actual: " + idNodoActual +
+                System.out.println(i + 1 + ". ID del nodo actual: " + idNodoActual +
                         " || Nombre de la vía: " + nombreVia +
                         " || Tiempo: " + minutos + " min " + segundos + "seg ");
             }
@@ -142,7 +139,7 @@ public class Main {
         int minutosTotales = (int) tiempoTotal / 60;
         int segundosTotales = (int) tiempoTotal % 60;
 
-        System.out.println("RESUMEN");
+        System.out.println("\n=== RESUMEN ===");
         System.out.println("Distancia total: " + distanciaTotal + " metros (" + distanciaTotal / 1000 + " km)");
         System.out.println("Tiempo total: " + minutosTotales + " minutos y " + segundosTotales + " segundos");
         System.out.println("Número de nodos recorridos: " + ruta.size());
